2003-11-19  Adam Fedor  <fedor@gnu.org>

	* Window Focus fixes.
	* Source/NSApplication.m (-activateIgnoringOtherApps:): Make
	hidden_key key only if we have no key, make main key if neither,
	make menu key as last resort.
	(-deactivate): Resign main window.
	(Patches from Benhur Stein <benhur@inf.ufsm.br>).
	(-unhideWithoutActivation): Set hidden=no before ordering windows
	to avoid possible recursive loops.
	* Source/NSWindow.m (-sendEvent:)(NSLeftMouseDown): Activate app
	after ordering window front.	
	(-sendEvent:)(GSAppKitWindowFocusIn): Don't make ourselves key
	if we're not the modal window. Remove check for app isHidden.

2003-11-19 03:17  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSClipView.m (-autoscroll:): Reimplement correctly.

	* Source/NSTextView.m (-mouseDown:): When the mouse is outside
	the view, autoscroll smoothly using periodic events.

2003-11-18 21:43  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSEvent.m (-description): Remove a stray , that was messing
	up a +stringWithFormat: call. Make eventTypes static.

2003-11-11 14:41  Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSApplication.m: (-targetForAction:): Added code to check the
	document of the main window as well.
	* NSToolbar.m: Additional implementation.
	* NSWindow.[hm]: Added some code for drawing the toolbar.
	* GSToolbarView.h: added initWithToolbar: method.
	
2003-11-07 15:28  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSControl.m (-mouseDown:): Rewrite to use -setHighlighted:
	and the normal drawing mechanisms instead of trying to draw and flush
	manually. (Fixes a bunch of visual glitches.)

2003-11-07 14:42  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSInputManager.m (-loadBindingsFromFile:): Handle errors
	directly instead of using (broken) exception code.

2003-11-01 18:19  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSLayoutManager.m (-drawGlyphsForGlyphRange:atPoint:):