@@ -1,80 +1,0 @@
-  NSServices = (
-    {
-      NSFilter = cat;
-      NSInputMechanism = NSUnixStdio;
-      NSPortName = "/bin/cat";
-      NSSendTypes = (
-	NSFilenamesPboardType
-      );
-      NSReturnTypes = (
-	NSGeneralPboardType
-      );
-    },
-    {
-      NSPortName = ExampleServices;
-      NSFilter = md5;
-      NSSendTypes = (
-	NSStringPboardType
-      );
-      NSReturnTypes = (
-	md5Digest
-      );
-    },
-    {
-      NSPortName = ExampleServices;
-      NSMessage = openURL;
-      NSSendTypes = (
-	NSStringPboardType
-      );
-      NSMenuItem = {
-	default = "Open URL";
-	English = "Open URL";
-	Italian = "Apri URL";
-	German = "URL \U00F6ffnen";
-      };
-      NSKeyEquivalent = {
-	default = O;
-	English = O;
-      };
-    },
-    {
-      NSPortName = ExampleServices;
-      NSMessage = tolower;
-      NSSendTypes = (
-	NSStringPboardType
-      );
-      NSReturnTypes = (
-	NSStringPboardType
-      );
-      NSMenuItem = {
-	default = "To lower";
-	English = "To lower";
-	Italian = "Rendi minuscolo";
-	German = "Klein schreiben";
-      };
-      NSKeyEquivalent = {
-	default = L;
-	English = L;
-      };
-    },
-    {
-      NSPortName = ExampleServices;
-      NSMessage = toupper;
-      NSSendTypes = (
-	NSStringPboardType
-      );
-      NSReturnTypes = (
-	NSStringPboardType
-      );
-      NSMenuItem = {
-	default = "To upper";
-	English = "To upper";
-	Italian = "Rendi maiuscolo";
-	German = "Gro\U00DF schreiben";
-      };
-      NSKeyEquivalent = {
-	default = U;
-	English = U;
-      };
-    }
-  );
